kubernetes/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      serviceAccountName: lenneflow-sa
      containers:
      - name: account-service
        image: lenneflow/account-service
        ports:
        - containerPort: 47001
