kubernetes/callback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callback-service
  labels:
    app: callback-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callback-service
  template:
    metadata:
      labels:
        app: callback-service
    spec:
      serviceAccountName: lenneflow-sa
      hostNetwork: true
      containers:
      - name: callback-service
        image: lenneflow/callback-service
        ports:
        - containerPort: 47007
          hostPort: 47007
