kubernetes/function-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-service
  labels:
    app: function-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: function-service
  template:
    metadata:
      labels:
        app: function-service
    spec:
      serviceAccountName: lenneflow-sa
      hostNetwork: true
      containers:
      - name: function-service
        image: lenneflow/function-service
        ports:
        - containerPort: 47003
          hostPort: 47003
