kubernetes/orchestration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestration-service
  labels:
    app: orchestration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestration-service
  template:
    metadata:
      labels:
        app: orchestration-service
    spec:
      serviceAccountName: lenneflow-sa
      hostNetwork: true
      containers:
      - name: orchestration-service
        image: lenneflow/orchestration-service
        ports:
        - containerPort: 47002
          hostPort: 47002
