kubernetes/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  labels:
    app: worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      serviceAccountName: lenneflow-sa
      hostNetwork: true
      containers:
      - name: worker-service
        image: lenneflow/worker-service
        ports:
        - containerPort: 47004
          hostPort: 47004
