kubernetes/workflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-service
  labels:
    app: workflow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow-service
  template:
    metadata:
      labels:
        app: workflow-service
    spec:
      serviceAccountName: lenneflow-sa
      hostNetwork: true
      containers:
      - name: workflow-service
        image: lenneflow/workflow-service
        ports:
        - containerPort: 47005
          hostPort: 47005
